--- a/assignment3-part2.ipynb
+++ b/assignment3-part2.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path to dataset files: /home/vinzr/.cache/kagglehub/datasets/cdc/mortality/versions/2\n"
+      "Path to dataset files: C:\\Users\\maxim\\.cache\\kagglehub\\datasets\\cdc\\mortality\\versions\\2\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0f840ed91ab499e83eda54fcd2dca08",
+       "model_id": "d42ab9df908e47d4b298ebc8b78fe3c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
